# uvpackage

{{cookiecutter.name}}/: CLAUDE.md  Dockerfile  Makefile  README.md  aliases.sh  pre-push  pyproject.toml  repl-snippet.py  setup-git-hooks.sh
{{cookiecutter.name}}/.claude/commands/: fillblanks.md
{{cookiecutter.name}}/.github/actions/basic_setup/: action.yaml
{{cookiecutter.name}}/.github/workflows/: unit-tests.yaml
{{cookiecutter.name}}/src/{{cookiecutter.name}}/: cli.py
