[project]
name = "{{cookiecutter.name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [
 { name = "author name", email = "author@email.com" },
]
readme = "README.md"
requires-python = ">=3.13"


[project.scripts]
{{cookiecutter.name}}-cli = "{{cookiecutter.name}}.cli:main"

[tool]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]

package = true
